<resources>
    <string name="app_name">Quiz Application Project</string>
    <string name="quizzy_title">Quizzy!</string>
    <string name="create_button">Create Quiz</string>
    <string name="view_button">View Stats</string>
    <string name="study_button">Study</string>
    <string name="edit_button">Edit Quiz</string>
    <string name="profile_button">Profile</string>
    <string name="logout_button">Logout</string>
    <string name="email_input">Enter email</string>
    <string name="password_input">Enter password</string>
    <string name="email_textview">Email</string>
    <string name="pass_textview">Password</string>
    <string name="login_button">Login</string>
    <string name="create_account_button"><u>Create Account</u></string>
    <string name="name_input">Name</string>
    <string name="name_create">Name</string>
    <string name="email_create">Email</string>
    <string name="reenter_email_create">Re-enter email</string>
    <string name="password_reenter_create">Re-enter password</string>
    <string name="password_create">Password</string>
    <string name="create_account">Create Account</string>
    <string name="create_name">Name</string>
    <string name="create_email_text">Email</string>
    <string name="create_password_text">Password</string>
    <string name="create_reenter_password_text">Re-enter Password</string>
    <string name="pick_avatar_text">Pick Your Avatar:</string>
    <string name="flashcardText">Create Quiz</string>
    <string name="quiz_name_input">Title of Quiz Set</string>
    <string name="class_input">Class Subject</string>
    <string name="login_email">Enter email</string>
    <string name="login_password">Enter password</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="setup_name_text">Name</string>
    <string name="setup_email_text">Email</string>
    <string name="setup_password_text">Password</string>
    <string name="setup_reenter_text">Re-enter Password</string>
    <string name="setup_avatar_text">Pick an Avatar:</string>
    <string name="setup_name_input">Name</string>
    <string name="setup_email_intput">Email</string>
    <string name="setup_password_input">Password</string>
    <string name="setup_reenter_input">Re-enter password</string>
    <string name="setup_email_input">Email</string>
    <string name="create_quiz_title">Create Quiz</string>
    <string name="create_quiz_name">Name of Quiz</string>
    <string name="create_subject_input">Subject</string>
    <string name="create_quiz_title_input">Name of Quiz</string>
    <string name="create_quiz_button">Next</string>
    <string name="flashcard_term_input">Term</string>
    <string name="flashcard_def_input">Definition</string>
    <string name="flashcard_submit">Submit</string>
    <string name="setup_signup_button">SIGN UP</string>
    <string name="setup_login"><u>Already have an account, sign in.</u></string>
    <string name="profile_title">Profile</string>
    <string name="profile_user_name">User name</string>
    <string name="profile_email">Your email</string>
    <string name="flash_term_def">Term/Definition</string>
    <string name="flash_done_button">DONE</string>
    <string name="display_set_title">Which set do you want to study?</string>
    <string name="display_user_Set">User set displayed</string>
    <string name="edit_save_button">Save</string>
    <string name="edit_delete_button">Delete</string>
    <string name="edit_definition">definition</string>
    <string name="edit_term">term</string>
</resources>