<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/img_1">

    <Button
        android:id="@+id/mainCreateButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_button_menu"
        android:text="@string/create_button"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainStudyButton" />

    <Button
        android:id="@+id/mainViewStatsButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_button_menu"
        android:text="@string/view_button"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainEditButton" />

    <Button
        android:id="@+id/mainStudyButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/blue_button_menu"
        android:text="@string/study_button"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <Button
        android:id="@+id/mainEditButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_button_menu"
        android:text="@string/edit_button"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCreateButton" />

    <Button
        android:id="@+id/mainProfileButton"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/yellow_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/profile_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainLogoutButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_button"
        android:text="@string/logout_button"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainViewStatsButton" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/advent_pro_bold"
        android:text="@string/quizzy_title"
        android:textColor="@color/white"
        android:textSize="120sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>