<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_1">


    <EditText
        android:id="@+id/flashcardTermInput"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/white_button_pink_border"
        android:ems="10"
        android:hint="@string/flashcard_term_input"
        android:inputType="text"
        android:padding="10dp"

        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/flashcardDefinitionInput"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_button_pink_border"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/flashcard_def_input"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcardTermInput" />

    <Button
        android:id="@+id/flashSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_button_yellow_border"
        android:text="@string/flashcard_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcardDefinitionInput" />

    <Button
        android:id="@+id/flashDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/white_button_yellow_border"
        android:text="@string/flash_done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashcardDefinitionInput" />

    <TextView
        android:id="@+id/flashTermDef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/flash_term_def"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    />

</androidx.constraintlayout.widget.ConstraintLayout>