<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_1">

    <Button
        android:id="@+id/setupSignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/white_button_yellow_border"
        android:text="@string/setup_signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/setupNameInput"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_button_pink_border"
        android:ems="10"
        android:hint="@string/setup_name_input"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupTitle" />

    <EditText
        android:id="@+id/setupEmailInput"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_button_pink_border"
        android:ems="10"
        android:hint="@string/setup_email_input"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupNameInput" />

    <EditText
        android:id="@+id/setupPasswordInput"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/white_button_pink_border"
        android:ems="10"
        android:hint="@string/setup_password_input"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupEmailInput" />

    <EditText
        android:id="@+id/setupReenterInput"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_button_pink_border"
        android:ems="10"
        android:hint="@string/setup_reenter_input"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupPasswordInput" />

    <TextView
        android:id="@+id/setupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupReenterInput">

            <RadioButton
                android:id="@+id/elephantAv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/elephant" />

            <RadioButton
                android:id="@+id/pigAv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white"
                />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/pig" />

            <RadioButton
                android:id="@+id/foxAv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/fox" />

            <RadioButton
                android:id="@+id/slothAv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/sloth" />

    </RadioGroup>

    <TextView
        android:id="@+id/setupNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="1dp"
        android:text="@string/setup_name_text"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/setupNameInput"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/setupEmailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="1dp"
        android:text="@string/setup_email_text"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/setupEmailInput"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/setupPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="1dp"
        android:text="@string/setup_password_text"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/setupPasswordInput"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/setupReenterView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="1dp"
        android:text="@string/setup_reenter_text"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/setupReenterInput"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/setupAvatarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="2dp"
        android:text="@string/setup_avatar_text"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setupReenterInput" />

</androidx.constraintlayout.widget.ConstraintLayout>